package libevrpc;

import "center_type.proto";
import "center_client.proto";
import "center_cluster.proto";

// 选举算法使用，决定哪一台机器为Leader，便于同步全局RpcServer列表
enum CenterStatus {
    LOOKING = 0;
    FOLLOWING = 1;
    OBSERVING = 2;
    LEADING = 3;
    UNKONW = 4;
    DEAD = 5;
};

enum CenterAction {
    PROPOSAL = 0;
    ACCEPT = 1;
    REFUSED = 2;
};

message CentersProto {
    optional CenterStatus center_status = 1;
    optional CenterAction center_action = 2;
    optional uint64 start_time = 3;
    optional uint64 lc_start_time = 4;
    optional uint64 logical_clock = 5;
    optional string leader_center = 6;
};


